--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         <div class="main">
             <div id="stepper">
                 <ol>
-                    <li active="true"><a href="/index.html">Meme</a></li>
+                    <li id="selected"><a href="./index.html">Meme</a></li>
                     <li>Deploy</li>
                     <li>Premine</li>
                 </ol>
