--- a/src/index2.html
+++ b/src/index2.html
@@ -31,7 +31,7 @@
             <div id="stepper">
                 <ol>
                     <li><a href="./index.html">Meme</a></li>
-                    <li active="true"><a href="./index2.html">Deploy</a></li>
+                    <li id="selected"><a href="./index2.html">Deploy</a></li>
                     <li>Premine</li>
                 </ol>
             </div>
