--- a/src/index3.html
+++ b/src/index3.html
@@ -27,9 +27,9 @@
         <div class="main">
             <div id="stepper">
                 <ol>
-                    <li><a href="index.html">Meme</a></li>
-                    <li><a href="index2.html">Deploy</a></li>
-                    <li active="true"><a href="index3.html">Premine</a></li>
+                    <li><a href="./index.html">Meme</a></li>
+                    <li><a href="./index2.html">Deploy</a></li>
+                    <li id="selected"><a href="./index3.html">Premine</a></li>
                 </ol>
             </div>
             <div id="cnt">
