--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,9 @@
                 <section>
                     <h2>What is this?</h2>
                     <p>
-                        Apparently, we are creating meme tokens in 2020 on Ethereum. This tool will help you deploy your own! <br />
-                        Do not forget to hire a Twitter army to constantly hype the project up then play it cool and say it was cool experiment 
+                        Apparently, we are creating meme tokens and forgetting about good deployment practices in 2020 on Ethereum. This tool will 
+                        help you deploy your own!
+                        Do not forget to hire/bribe/befriend a Twitter army to constantly hype the project up then play it cool and say it was cool experiment 
                         when it (statistically speaking) inevitably fails and breaks!
                     </p>
                     <p>
