--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,19 @@
     <title>The Degenerator</title>
     <meta name="title" content="The Degenerator - meme some tokens">
     <meta name="description" content="Token memes">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://thedegenerator.netlify.app/">
+    <meta property="og:title" content="The Degenerator - deploy meme tokens with three clicks!">
+    <meta property="og:description" content="Fuck responsible deployment practices and security audits - do it all with three clicks!">
+    <meta property="og:image" content="https://archivenode.io/images/logo.png">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://thedegenerator.netlify.app/">
+    <meta property="twitter:title" content="The Degenerator - deploy meme tokens with three clicks!">
+    <meta property="twitter:description" content="Fuck responsible deployment practices and security audits - do it all with three clicks!">
+    <meta property="twitter:image" content="https://thedegenerator.netlify.app/images/logo.png">
 </head>
 
 <body>
