--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://thedegenerator.netlify.app/">
     <meta property="og:title" content="The Degenerator - deploy meme tokens with three clicks!">
     <meta property="og:description" content="Fuck responsible deployment practices and security audits - do it all with three clicks!">
-    <meta property="og:image" content="https://archivenode.io/images/logo.png">
+    <meta property="og:image" content="https://thedegenerator.netlify.app/images/logo.png">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://thedegenerator.netlify.app/">
