--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,15 @@
                         Also, this tool is so good, you won't even need to hire a firm to audit the code logic on your deployed contracts! Saving you $$$!
                     </p>
                     <p>
-                        <small>PS: This was a concept created by <a href="https://twitter.com/JordanLyall/status/1294466755692081152/photo/1" target="_blank">@Jordan Lyall</a> - I just (attempted to) code it up to an actual website.</small>
+                        <small>PS: This was a concept created by <a href="https://twitter.com/JordanLyall/status/1294466755692081152/photo/1" target="_blank">@Jordan Lyall</a> - I just (attempted to) code 
+                            it up to an actual website.</small>
+                        <br /><br />
+                        <small>The code is on GitHub: <a href="https://github.com/409H/thedegenerator" target="_blank">@409H/thedegenerator</a>. Support me: 0x11b6A5fE2906F3354145613DB0d99CEB51f604C9</small>
+                    </p>
+
+                    <p>
+                        <script src="https://widgets.coingecko.com/coingecko-coin-ticker-widget.js"></script>
+                        <coingecko-coin-ticker-widget currency="usd" coin-id="degenerator" locale="en"></coingecko-coin-ticker-widget>
                     </p>
                 </section>
 
