Added explicit disclaimer

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,9 @@
                         <small>PS: This was a concept created by <a href="https://twitter.com/JordanLyall/status/1294466755692081152/photo/1" target="_blank">@Jordan Lyall</a> - I just (attempted to) code 
                             it up to an actual website.</small>
                         <br /><br />
-                        <small>The code is on GitHub: <a href="https://github.com/409H/thedegenerator" target="_blank">@409H/thedegenerator</a>. Support me: 0x11b6A5fE2906F3354145613DB0d99CEB51f604C9</small>
+                        <small>The code is on GitHub: <a href="https://github.com/409H/thedegenerator" target="_blank">@409H/thedegenerator</a>.</small>
+                        <br />
+                        <span style="line-height:5em;color:#DE1F1F;font-weight:800">This is satire, do not buy into meme coins - remember to do your own research!</span>
                     </p>
 
                     <p>
